# BOLIDE_Player

./: .gitignore  .travis.yml  A1-16.cpp  CMakeLists.txt  README.md  build.py  conanfile.py
.travis/: install.sh
src/: A1-16.h  BOLIDE_Player.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
